...
                                                <rect key="frame" x="0.0" y="0.0" width="230" height="89"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username, Email or Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zDm-Rb-XWz">
                                                        <rect key="frame" x="0.0" y="0.0" width="230" height="17"/>
                                                        <constraints>
...
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jhs-w0-osX">
                                                        <rect key="frame" x="0.0" y="28" width="230" height="17"/>
                                                        <constraints>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                                        <state key="normal" title="Sign In"/>
                                                        <connections>
                                                            <action selector="emailLogin:" destination="Nwf-t9-YbQ" eventType="touchUpInside" id="JKT-EH-VZB"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="16"/>
                                                <state key="normal" title="New? Map Your World">
                                                    <color key="titleColor" red="0.4785205126" green="0.78952473400000001" blue="0.0048054424109999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                <rect key="frame" x="43" y="306.5" width="289" height="42.5"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="igb-sL-x3Y" userLabel="Email Text Field">
                                        <rect key="frame" x="8.5" y="6" width="272" height="30"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <action selector="nextButtonClicked:" destination="8P8-kk-dh6" eventType="touchUpInside" id="7cX-eW-heU"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
                                        <state key="normal" title="Finish"/>
                                        <connections>
                                            <action selector="finishBttnPressed:" destination="23E-AK-q7g" eventType="touchUpInside" id="OA2-8H-dJX"/>
...
                                <rect key="frame" x="47.5" y="271" width="280" height="102"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Full Name" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Td2-U1-jJh">
                                        <rect key="frame" x="0.0" y="0.0" width="280" height="24"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Choose Username" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LnA-bo-zKe">
                                        <rect key="frame" x="0.0" y="78" width="280" height="24"/>
                                        <constraints>
...
