...
            case 8:
                let storyboard = UIStoryboard(name: "Settings", bundle: nil)
                let VC = storyboard.instantiateViewController(withIdentifier: "Privacy") as? PrivacyViewController
                self.present(VC!, animated: true, completion: nil)
            case Constants.settings.cellTitles.count - 1:
                
                let alertController = UIAlertController(title: "Logout?", message: nil, preferredStyle: .actionSheet)
                
                let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
                alertController.addAction(cancelAction)
                
                let OKAction = UIAlertAction(title: "Logout", style: .destructive) { action in
                    self.fBManager!.logOut()
                    FBSDKAccessToken.setCurrent(nil)
                    FBSDKProfile.setCurrent(nil)
                    AuthApi.setDefaultsForLogout()
                    UserDefaults.standard.set("notLoggedIn", forKey: "Login")
                    GIDSignIn.sharedInstance().signOut()
...
