...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Niz-Af-QYR">
                                                                <rect key="frame" x="229" y="0.0" width="30" height="30"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="30" id="fKh-C5-IPk"/>
                                                                    <constraint firstAttribute="width" constant="30" id="yhf-EW-Dvc"/>
                                                                </constraints>
                                                                <state key="normal" image="Gear"/>
                                                                <connections>
                                                                    <action selector="settingButtonPressed:" destination="cU2-hP-1h7" eventType="touchUpInside" id="3NQ-fK-LIq"/>
                                                                </connections>
                                                            </button>
                                                        </subviews>
                                                    </stackView>
...
